--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "wtlrs"
 version = "0.1.0"
 edition = "2021"
 
+authors = ["Watal M. Iwasaki <heavywatal@gmail.com>"]
+repository = "https://github.com/heavywatal/wtlrs"
+license = "MIT"
+publish = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
